# axum_db_proj

./: Cargo.toml  script.sql  todo.txt
src/: error.rs  lib.rs  main.rs  model_mod.rs  router_mod.rs
src/router_mod/: handler_mod.rs
src/router_mod/handler_mod/: get_customer_mod.rs  get_customers_mod.rs  get_product_mod.rs  post_sales_order_mod.rs  post_sales_order_with_cust_mod.rs  post_task_mod.rs  post_with_new_cust_mod.rs  post_with_old_cust_mod.rs  tasks_mod.rs
src/router_mod/handler_mod/tasks_mod/: get_desig_mod.rs  get_workers_mod.rs  post_tasks_mod.rs
tests/: db_tests.rs
